--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   </form>
 
 <script>
-const API = "PEGA_ACÁ_TU_URL_WEBAPP"; 
+const API = "https://script.google.com/macros/s/AKfycbxyKcryiKsJ6PkQuY0VartAiNZ6otHuyNBiPUFLrH2tFZ8J9cUTCBbYKMneY1jQj601/exec"; 
 let catalogo = [];
 let carrito = [];
 
@@ -126,3 +126,4 @@ cargarCatalogo();
 </script>
 </body>
 </html>
+
